# familydiagram

./: .dockerignore  .gitguardian.yaml  .gitignore  .gitmodules  .mcp.json  BACKEND_AUTO_ARRANGE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Family Diagram.code-workspace  Gemfile  Licensing-Info.txt  Pipfile  Pipfile.bak  README.md  VariableBox.qml  ai_log.txt  appcast_macos_beta.xml  appcast_windows_beta.xml  debug.bat  familydiagram.pdt  familydiagram.pro  install_vendored.py  main.py  profile_load.py  profile_load_mw.py  pyproject.toml  pyrightconfig.json  pytest.ini  python_init.py  requirements.txt  test.py  test2.py  test_qml.py  test_qml.qml
.github/: appcast_template.xml  copilot-instructions.md
.github/workflows/: build-cache.yml  build-macos.yml  build-windows.yml  cache-test.yml  deploy-macos.yml  deploy-windows.yml  install_certificates.sh  integration.yml  release.yml  sysroot-macos.yml  test.yml  update_appcast.yml
_pkdiagram/: _pkdiagram.cpp  _pkdiagram.h  _pkdiagram_mac.mm  _pkdiagram_win32.cpp  project.py  pyproject.toml  unsafearea.cpp  unsafearea.h
_pkdiagram/sip/_pkdiagram/: _pkdiagrammod.sip
adrs/: 0001-scene-owns-item-relationships.md  0002-ai-manual-testing-strategy-personal-app.md  README.md
doc/: APP_EVENT_FLOWS.md  APP_EVENT_FLOWS.txt  AWS Authenticating REST Requests.html  BUILD_SYSTEM.md  CHANGELOG-RELEASE.txt  CHANGELOG.txt  CLEANUP.md  DATA_MODEL.md  F-253-JSON_MIGRATION.md  FLATTENING_EVENTS.md  FLATTEN_EVENTS_CLAUDE.md  FLATTEN_EVENTS_DONE.md  FLATTEN_EVENTS_TODO.md  INFRASTRUCTURE.md  IOS_BUILD_GUIDE.md  LIBS README.txt  PERSONAL_DATA_SYNC.md  RELEASE_PROCESS.md  SARF_GRAPH.md  SARF_GRAPH_PROMPT.md  SECURITY PLAN.txt  SERVER USER STORIES.txt  STRANGE_BUGS.txt  TESTS_TODO.md  TIMELINE_CLICK_PLAN.md  TIMELINE_VIGNETTES_VISION.md  TODO.md  TODO.txt  TODO_CHILDS.md  TODO_FLATTEN_EVENTS.md  TRIANGLE_VIEW_VISION.md  UI_STYLE_SPEC.md  appcenter_appcast_example.xml
doc/Icon/: PKDiagram.psd
doc/agents/: ui-planner.md
doc/archive/: 2026-02-PERSONAL_DATA_SYNC.md  2026-03-APP_EVENT_FLOWS.md  2026-03-CLEANUP.md  2026-03-DATA_MODEL.md  2026-03-FLATTEN_EVENTS_CLAUDE.md  2026-03-FLATTEN_EVENTS_DONE.md  2026-03-SARF_GRAPH.md  2026-03-SARF_GRAPH_PROMPT.md  2026-03-TODO_CHILDS.md  2026-03-TRIANGLE_VIEW_VISION.md
doc/asbuilts/: LEARN_VIEW.md  TIMELINE_CLICK_IMPLEMENTED.md  TRIANGLE_VIEW.md
doc/brainstorming/: TIMELINE_VIGNETTES.md  triangle-visualization.md
doc/fmea/: 2026-04-12--t04-concurrent-save-integrity.md  2026-04-12--t04-data-integrity.md  README.md
doc/plans/: PERSONAL_APP_UI_UX_TEST_PLAN.md  diagram-data-integrity-tests.md  e2e-test-harness.md  gemini-tts-evaluation.md  pyside6-ios-solution.md
doc/specs/: DATA_SYNC_FLOW.md
doc/test-logs/: INDEX.md
doc/ui-specs/: app-navigation-shell.md
doc/whitepapers/: 1-Agentic-Graphical-Mockups.md
lldb/: lldb-commands.mi  lldb_breakpoint.py  qt_pretty_print.py
mcp-server/: README.md  mcp_server.py  pyproject.toml
mcpserver/: README.md  __init__.py  app_controller.py  ephemeral_server.py  input_simulator.py  mcp_server.py  snapshot.py
mcpserver/tests/: __init__.py  test_mcpserver_example.py
models/: agent_functional_self_old.py  proximity.py  server.py  triangles.py
pkdiagram/: __init__.py  __main__.py  accountdialog.py  addanythingdialog.py  addemotiondialog.py  addeventdialog.py  analytics.py  app.py  appconfig.py  appcontroller.py  application.py  commands.py  compat.py  condition.py  documentcontroller.py  documentview.py  dragpan.py  eventkind.py  extensions.py  extras.py  filemanager.py  graphicaltimeline.py  graphicaltimelinecanvas.py  graphicaltimelineview.py  helpoverlay.py  itemgarbage.py  legend.py  main.py  mainwindow.py  mainwindow.ui  mainwindow_form.py  panzoom.py  pkdiagram.code-workspace  pkdiagram.pro  preferences.py  preferences.ui  preferences_form.py  pyqt.py  qmldrawer.py  qmlengine.py  (+21 more)
pkdiagram/_pkdiagram/: _pkdiagram.cpp  _pkdiagram.h  _pkdiagram_mac.mm  _pkdiagram_win32.cpp  project.py  pyproject.toml
pkdiagram/app/: __init__.py  analytics.py  appconfig.py  appcontroller.py  application.py  commands.py  compat.py  itemgarbage.py  qmlengine.py  qmlutil.py  qmlvedana.py  server.py  session.py
pkdiagram/documentview/: __init__.py  documentcontroller.py  documentview.py  dragpan.py  graphicaltimeline.py  graphicaltimelinecanvas.py  graphicaltimelineview.py  helpoverlay.py  legend.py  panzoom.py  qmlengine.py  toolbars.py  view.py
pkdiagram/mainwindow/: __init__.py  autosavemanager.py  filemanager.py  mainwindow.py  mainwindow.ui  mainwindow_form.py  preferences.py  preferences.ui  preferences_form.py  welcome.py  welcome_form.py
pkdiagram/mapserver/: __init__.py  app_controller.py  client.py  element_finder.py  (+3 more)
scripts/: build-pkdiagram-linux.sh  sync-board.sh
sysroot/: OpenSSL.py  PyQt.py  Qt-5.15.x-libpng.patch  Qt.py  SIP.py  _pkdiagram.py  _vedanaprivate.py  btcopilot.py  bugsnag.py  compileall.py  dateutil.py  fdwheel.py  libpng.py  mixpanel.py  pip.py  pydantic.py  python.py  six.py  sortedcontainers.py  sysroot.toml  typing_extensions.py  vedana.py  vedanaprivate.py  wheel.py  xlsxwriter.py  zlib.py
tests/: CLAUDE.md  conftest.py  pytest.ini  requirements.txt  test_00_suite.py  test_AccountDialog.py  test_CaseProperties.py  test_DatePicker.py  test_SearchView.py  test_TimelineView.py  test_accessrightsmodel.py  test_addanythingdialog.py  test_addanythingdialog_arrange.py  test_addanythingdialog_fields.py  test_addanythingdialog_migrations.py  test_addanythingdialog_scripts.py  test_addanythingdialog_validation.py  test_addanythingform.py  test_addemotiondialog.py  test_addeventdialog.py  test_analytics.py  test_appconfig.py  test_appcontroller.py  test_autoarrange.py  test_autoarrangeengine.py  test_bug_bucket.py  test_categories.py  test_childof.py  test_deprecated.py  test_documentview.py  test_emotionproperties.py  test_emotionpropertiesmodel.py  test_emotions.py  test_event.py  test_eventproperties.py  test_eventpropertiesmodel.py  test_eventvariablesmodel.py  test_extensions.py  test_extras.py  test_filemanager.py  (+38 more)
(+593 files in other folders)
